# agila-metoder-projektet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  ORGpyproject.toml  TODO_isak.md  docker-compose.yaml  mötesanteckningar.md  pyproject.toml  requirements.txt
ORGsrc/newsfeed/: download_blogs_from_rss.py
dags/: Max_roliga_DAGtest.py  S3_compabillity.py  S3_compatibility_dag.py  S3_utils.py  isak_test_dag.py  mikaels_dag.py  pipeline_dag.py  test.py  tutorial.py
dags/newsfeed/: clearbucket.py  datatypes.py  download_blogs_from_rss.py  extract_articles.py  log_utils.py  send_to_discord.py  summarize.py
dags/newsfeed/data_warehouse/: database_utils.py  save_articles.py  summarize.py
disctest/: disctest.py
docs/: conf.py  index.rst
docs/_build/doctrees/: Max_roliga_DAGtest.doctree  S3_compatibility_dag.doctree  S3_utils.doctree  docker-compose.doctree  docker-compose.yaml.doctree  environment.pickle  index.doctree  modules.doctree  newsfeed.data_warehouse.doctree  newsfeed.doctree  pipeline_dag.doctree
docs/_build/html/: S3_compatibility_dag.html  docker-compose.html  docker-compose.yaml.html  index.html  (+5 more)
docs/html/: .buildinfo  Max_roliga_DAGtest.html  S3_utils.html  genindex.html  modules.html  newsfeed.data_warehouse.html  newsfeed.html  pipeline_dag.html  py-modindex.html
src/newsfeed/: download_blogs_from_rss.py  send_to_discord.py  summarize.py
tests/: disabled_test_download_blogs_from_rss.py  disabled_test_summarize.py  test_datatypes.py  test_download_blogs_from_rss_pytest.py  test_extract_articles.py  test_log_utils.py  test_send_to_discord.py
(+9 files in other folders)
