[tool.poetry]
name = "newsfeed"
version = "0.1.0"
description = "TODO"
authors = ["Modulai <info@modulai.io>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
jsonargparse = "^4.32.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.3.0"
loguru = "^0.7.0"
pandas = "^2.0.3"
pydantic = "^2.7.4"
langchain-core = "^0.2.32"
langchain = "^0.2.14"
python-dotenv = "^1.0.0"
openai = "^1.42"
black = "^24.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
mypy = "^1.11.0"
pytest = "^8.3.0"
discord = "^2.3.1"
apache-airflow = "^2.10.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
